@@ -17,32 +17,58 @@ public class Semantico implements Constants
 
     switch (action)
     {
-      case 1:
-        String tmp = currentToken.getLexeme();
-        if (tmp.charAt(0) == '0')
-          throw new SemanticError("Números começados por 0 não são permitidos", token.getPosition());
-        stack.push(Integer.valueOf(tmp));
-        break;
-      case 2:
-        b = (Integer) stack.pop();
-        a = (Integer) stack.pop();
-        stack.push(new Integer(a.intValue() + b.intValue()));
-        break;
-      case 3:
-        b = (Integer) stack.pop();
-        a = (Integer) stack.pop();
-        stack.push(new Integer(a.intValue() - b.intValue()));
-        break;
-      case 4:
-        b = (Integer) stack.pop();
-        a = (Integer) stack.pop();
-        stack.push(new Integer(a.intValue() * b.intValue()));
-        break;
-      case 5:
-        b = (Integer) stack.pop();
-        a = (Integer) stack.pop();
-        stack.push(new Integer(a.intValue() / b.intValue()));
-        break;
+        case 1:
+            String tmp = currentToken.getLexeme();
+            if (tmp.charAt(0) == '0')
+              throw new SemanticError("Números começados por 0 não são permitidos", token.getPosition());
+            stack.push(Integer.valueOf(tmp));
+            break;
+        case 2:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() + b.intValue()));
+            break;
+        case 3:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() - b.intValue()));
+            break;
+        case 4:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() * b.intValue()));
+            break;
+        case 5:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() / b.intValue()));
+            break;
+        case 6:
+            String tmp = currentToken.getLexeme();
+            if (tmp.charAt(0) == '0')
+              throw new SemanticError("Números começados por 0 não são permitidos", token.getPosition());
+            stack.push(Integer.valueOf(tmp));
+            break;
+        case 7:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() + b.intValue()));
+            break;
+        case 8:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() - b.intValue()));
+            break;
+        case 9:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() * b.intValue()));
+            break;
+        case 10:
+            b = (Integer) stack.pop();
+            a = (Integer) stack.pop();
+            stack.push(new Integer(a.intValue() / b.intValue()));
+            break;
     }
   }
 }
